[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen-moboulir"
version = "1.0.0"
description = "A modular maze generator and solver for 42 School"
authors = [{name = "Your Name", email = "your@email.com"}]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]