[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Generates and solves mazes with configurable size and complexity."
authors = [
    {name = "moboulir", email = "moboulir@student.1337.ma"},
    {name = "asmounci", email = "asmounci@student.1337.ma"}
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]